--- a/.gitignore
+++ b/.gitignore
@@ -1,103 +1,122 @@
-import styled from "styled-components";
+function parseHistoryToMock(history) {
+  // Função para agrupar approvals
+  function groupApprovals(steps) {
+    // Seleciona todos steps "Approvals and Restrictions:"
+    const approvalSteps = steps.filter(step =>
+      step.name && step.name.startsWith('Approvals and Restrictions')
+    );
+    // Para cada pessoa que deveria aprovar, pega os dados (mock espera um array de people)
+    const people = [];
+    approvalSteps.forEach(step => {
+      if (step.permissions?.people && Array.isArray(step.permissions.people)) {
+        step.permissions.people.forEach(person => {
+          // No mock cada pessoa pode ter action como array, garantir isso
+          people.push({
+            ...person,
+            // Aqui você pode adaptar os campos se quiser, ex:
+            action: person.action || [],
+          });
+        });
+      }
+    });
+    // Status geral: pending se algum pending, senão waiting/canceled/etc
+    const status =
+      approvalSteps.find(s => s.status === 'pending')?.status ||
+      approvalSteps[0]?.status ||
+      'pending';
+    return {
+      id: 3,
+      name: "Approvals and Restrictions",
+      status,
+      successLabel: "Approved",
+      permissions: {
+        people
+      }
+    };
+  }
 
-export const PaperWrapper = styled.div`
-  display: flex;
-  gap: 1.5rem;
-`;
+  // Função para transformar um step "simples"
+  function mapStep(step, mockData) {
+    return {
+      id: step.id,
+      name: step.name,
+      status: step.status,
+      successLabel: step.successLabel || '',
+      permissions: {
+        people: (step.permissions?.people || []).map(p => ({
+          ...p,
+          action: p.action || [],
+        }))
+      }
+    };
+  }
 
-export const Title = styled.div`
-  color: #484a55;
-  font-family: "Figtree";
-  font-size: 16px;
-  font-weight: 600;
-  line-height: 24px;
-  letter-spacing: 0.12px;
-  text-align: left;
-`;
+  // 1. Transforma steps em formato mock
+  const mockData = [];
 
-export const AditionalApprover = styled.div`
-  font-size: 14px;
-  line-height: 21px;
-  font-weight: 400;
-  font-style: "Figtree";
-  text-color: #636574;
-`;
+  // 2. "Initiator"
+  const initiatorStep = history.data.flat().find(s => s.name?.toLowerCase().includes("initiator"));
+  if (initiatorStep) {
+    mockData.push(mapStep(initiatorStep));
+  }
 
-export const AditionalWrapper = styled.div`
-  display: flex;
-  align-items: center;
-  text-color: #636574;
-`;
+  // 3. "Validations" ou "Validation"
+  const validationStep = history.data.flat().find(s => s.name?.toLowerCase().includes("validation"));
+  if (validationStep) {
+    mockData.push({
+      ...mapStep(validationStep),
+      name: "Validations" // Normaliza nome
+    });
+  }
 
-export const Divider = styled.div`
-  border-bottom-width: 1px;
-  border-bottom-style: solid;
-  border-bottom-color: #ebebeb;
-  margin-left: 2.5rem;
-  margin-right: 2.5rem;
-`;
+  // 4. "Approvals and Restrictions" agrupado
+  mockData.push(groupApprovals(history.data.flat()));
 
-export const TableStepWrapper = styled.div`
-  margin-top: 2.5rem;
-`;
+  // 5. Restriction Removal
+  const restrictionRemovalStep = history.data.flat().find(s => s.name?.toLowerCase().includes("restriction removal"));
+  if (restrictionRemovalStep) {
+    mockData.push(mapStep(restrictionRemovalStep));
+  }
 
-export const ApprovalWrapper = styled.div`
-  gap: 1rem;
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 1.5rem;
-`;
+  // 6. "Wire Repair"
+  const wireRepairStep = history.data.flat().find(s => s.name?.toLowerCase().includes("wire repair"));
+  if (wireRepairStep) {
+    mockData.push(mapStep(wireRepairStep));
+  }
 
-export const TimelineWrapper = styled.div`
-  gap: 1rem;
-  display: flex;
-  flex-direction: column;
-`;
+  // 7. "OFAC"
+  const ofacStep = history.data.flat().find(s => s.name?.toLowerCase().includes("ofac"));
+  if (ofacStep) {
+    mockData.push(mapStep(ofacStep));
+  }
 
-export const MainWrapper = styled.div`
-  padding: 1.5rem;
-`;
+  // 8. "Processing"
+  const processingStep = history.data.flat().find(s => s.name?.toLowerCase().includes("processing"));
+  if (processingStep) {
+    mockData.push(mapStep(processingStep));
+  }
 
-export const DataDisplayWrapper = styled.div`
-  margin-top: 1.5rem;
-`;
+  // 9. "Initiator Notified"
+  const notifiedStep = history.data.flat().find(s => s.name?.toLowerCase().includes("initiator notified"));
+  if (notifiedStep) {
+    mockData.push(mapStep(notifiedStep));
+  }
 
-export const timelineWrapper = `
-  relative
-  w-full
-  overflow-hidden
-`;
+  // --- cardRowData e dataDisplayData, selectedBank
+  // Apenas replica do original (pode customizar se quiser)
+  return {
+    status: history.status,
+    data: mockData.map(item => [item]), // cada step como array (igual seu mock)
+    cardRowData: history.cardRowData,
+    dataDisplayData: history.dataDisplayData,
+    selectedBank: history.selectedBank,
+  };
+}
 
-export const scrollContainer = `
-  overflow-x-auto 
-  no-scrollbar 
-  scroll-smooth
-`;
+// Exemplo de uso:
+import history from './history.json'; // Seu history
 
-export const scrollContent = `
-  flex 
-  gap-6 
-  min-w-fit 
-  px-8
-`;
+const mockJson = parseHistoryToMock(history);
 
-export const chevronButton = `
-  absolute 
-  top-1/2 
-  -translate-y-1/2 
-  z-10 
-  bg-white 
-  shadow-md 
-  rounded-full 
-  p-1
-`;
-
-export const chevronLeft = `
-  left-0
-`;
-
-export const chevronRight = `
-  right-0
-`;
-
-
+// Use mockJson como quiser no seu front (passa pro componente, salva, etc)
+console.log(JSON.stringify(mockJson, null, 2));
